# DeskUp

./: .gitignore  CMakeLists.txt  CNAME  CREDITS.md  Doxyfile.in  GUIDE.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  TODO.md  annotated.html  annotated_dup.js  backend__utils_8h.html  backend__utils_8h.js  backend__utils_8h__dep__incl.dot  backend__utils_8h__dep__incl.map  backend__utils_8h__dep__incl.md5  backend__utils_8h__incl.dot  backend__utils_8h__incl.map  backend__utils_8h__incl.md5  backend__utils_8h_source.html  class_desk_up_1_1_error-members.html  class_desk_up_1_1_error.html  class_desk_up_1_1_error.js  class_desk_up_1_1_error__coll__graph.map  class_desk_up_1_1_error__coll__graph.md5  class_desk_up_1_1_error__inherit__graph.dot  class_desk_up_1_1_error_a7b193d6c7d6c8c16d1f2faf9eac1a79c_icgraph.dot  class_desk_up_1_1_error_a7b193d6c7d6c8c16d1f2faf9eac1a79c_icgraph.map  class_desk_up_1_1_error_a7b193d6c7d6c8c16d1f2faf9eac1a79c_icgraph.md5  class_desk_up_1_1_error_a9cfc3d6e4af797f64c43213447c54c51_cgraph.dot  class_desk_up_1_1_error_a9cfc3d6e4af797f64c43213447c54c51_cgraph.map  class_desk_up_1_1_error_a9cfc3d6e4af797f64c43213447c54c51_cgraph.md5  class_desk_up_1_1_error_a9cfc3d6e4af797f64c43213447c54c51_icgraph.dot  class_desk_up_1_1_error_a9cfc3d6e4af797f64c43213447c54c51_icgraph.map  class_desk_up_1_1_error_a9cfc3d6e4af797f64c43213447c54c51_icgraph.md5  class_desk_up_1_1_error_af7108f5f99fb01ebb7094bc3d9bb2fad_icgraph.dot  class_desk_up_1_1_error_af7108f5f99fb01ebb7094bc3d9bb2fad_icgraph.map  class_desk_up_1_1_error_af7108f5f99fb01ebb7094bc3d9bb2fad_icgraph.md5  class_desk_up_1_1_u_i_1_1_error_adapter-members.html  (+223 more)
.github/workflows/: CD-on-tags.yml  CI-on-dev.yml  CI-on-main.yml  CI-on-tags.yml  auto-deploy-docs.yml  cmake-multi-platform.yml
assets/: deskup-docs.css
benchmark/: CMakeLists.txt
benchmark/desk_up_backend_interface_benchmark/: CMakeLists.txt  desk_up_backend_interface_benchmark.cc
benchmark/desk_up_benchmarks/: desk_up_benchmarks.cc
benchmark/desk_up_error_benchmark/: CMakeLists.txt  desk_up_error_benchmark.cc
benchmark/desk_up_error_gui_converter_benchmark/: CMakeLists.txt  desk_up_error_gui_converter_benchmark.cc
benchmark/desk_up_frontend_benchmark/: CMakeLists.txt  desk_up_frontend_benchmark.cc
benchmark/desk_up_window_backend_benchmark/: CMakeLists.txt  desk_up_window_backend_benchmark.cc
benchmark/my_class_benchmarks/: my_class_benchmarks.cc
cmake/: CPM.cmake  appImage.cmake  benchmark.cmake  doxygen.cmake  qt.cmake  test.cmake  tools.cmake  win32.cmake
docs/: TODO  TODO.md
include/: backend_utils.h
include/desk_up_dir/: desk_up_dir.h
include/desk_up_lookup_table/: desk_up_lookup_table.h
include/desk_up_workspace_lookup_table/: desk_up_workspace_lookup_table.h
include/exceptions/desk_up_file_not_clear_exception/: desk_up_file_not_clear_exception.h
installation/: DeskUp-installer.iss
search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  enumvalues_c.js  enumvalues_d.js  (+53 more)
source/: README.md  _mainpage.dox  doxygen_overview.dox  main.cc
source/desk_up/: CMakeLists.txt  desk_up.cc  desk_up.h  mainWindow.cpp  mainWindow.h
source/desk_up_backend_interface/: CMakeLists.txt  desk_up_backend_interface.cc  desk_up_backend_interface.h
source/desk_up_dir/: CMakeLists.txt  desk_up_dir.cc
source/desk_up_error/: CMakeLists.txt  desk_up_error.cc  desk_up_error.h
source/desk_up_error_gui_converter/: CMakeLists.txt  desk_up_error_gui_converter.cc  desk_up_error_gui_converter.h
source/desk_up_frame/: CMakeLists.txt  desk_up_frame.cc  desk_up_frame.h
source/desk_up_frontend/: CMakeLists.txt  mainWindow.cpp
source/desk_up_lookup_table/: CMakeLists.txt  desk_up_lookup_table.cc
source/desk_up_qt/: CMakeLists.txt  main.cpp  mainWindow.cpp
source/desk_up_window/: CMakeLists.txt  desk_up_window.cc  desk_up_window.h
source/desk_up_window_backend/: CMakeLists.txt  backend_utils.cc  desk_up_is_available.h  desk_up_window_bootstrap.h  desk_up_window_device.h  window_core.cc  window_core.h  window_global.cc  window_global.h
source/desk_up_window_backend/backend_utils/: CMakeLists.txt  backend_utils.cc  backend_utils.h
source/desk_up_window_backend/windowDesc/: CMakeLists.txt  windowDesc.cc  windowDesc.h
source/desk_up_window_backend/window_backends/desk_up_win/: CMakeLists.txt  desk_up_win.cc  desk_up_win.h
source/desk_up_window_backend/window_backends/desk_up_x11/: CMakeLists.txt  desk_up_x11.cc  desk_up_x11.h
source/desk_up_window_backend/window_core/: CMakeLists.txt  window_core.cc  window_core.h
source/desk_up_window_backend/window_desc/: CMakeLists.txt  window_desc.cc  window_desc.h
source/desk_up_workspace_lookup_table/: CMakeLists.txt  desk_up_workspace_lookup_table.cc
source/exception/: desk_up_exception.h
source/exceptions/: DeskUpException.h
test/: CMakeLists.txt
test/desk_up_backend_interface_test/: CMakeLists.txt  desk_up_backend_interface_test.cc  desk_up_dummy_device.h
test/desk_up_error_gui_converter_test/: CMakeLists.txt  desk_up_error_gui_converter_test.cc
test/desk_up_error_test/: CMakeLists.txt  desk_up_error_test.cc
test/desk_up_frame_test/: CMakeLists.txt
test/desk_up_frame_test/desk_up_frame_test_usage/: CMakeLists.txt  desk_up_frame_test_usage.cc
test/desk_up_frontend_test/: CMakeLists.txt  desk_up_frontend_test.cc
test/desk_up_test/: CMakeLists.txt  desk_up_test.cc
test/desk_up_test/desk_up_test_loading/: CMakeLists.txt  desk_up_test_loading.cc
test/desk_up_window_backend_test/: CMakeLists.txt  desk_up_window_backend_test.cc  todo.txt
tools/lookup_cli/: CMakeLists.txt  main.cc
(+3 files in other folders)
